--- a/index.htm
+++ b/index.htm
@@ -1,17 +1,16 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Language" content="zh-tw">
 <meta http-equiv="Content-Type" content="text/html; charset=big5">
-<title>南無妙法蓮華經-受持的體驗</title>
-<bgsound src="唱題.wav" loop="-1">
+<title>南無妙法蓮華經</title>
 <meta name="keywords" content="南無妙法蓮華經,受持的體驗,唱題的體驗">
 <meta name="description" content="這是一個關於受持南無妙法蓮華經體驗的分享，日蓮大聖的佛法，南無妙法蓮華經，是能超越一切苦難，病痛的偉大佛法，裡面分享著我們超越困難的經過，我們以唱唸題目的力量來克服一切的難關，皆是我們真實的體驗，希望看到我們的文章的人，都能相信，南無妙法蓮華經是救濟末法眾生的唯一辦法。">
-<meta name="Microsoft Theme" content="none, default">
-<meta content="revealTrans(Duration=3.0,Transition=3)" http-equiv="Page-Enter">
-</head><meta name="google-site-verification" content="VWAPPgQzIyLHFD40tSh-ghG8DvFE-jrVTqU24NeKiDI" />
+<bgsound src="唱題.wav" loop="-1">
+</head>
 
-<body background="受持的體驗.jpg" alt="受持的體驗"></img>
+<body background="受持的體驗.jpg" alt="受持的體驗">
+
+</img>
 
 <p align="center"><font face="標楷體" size="6">南無妙法蓮華經(受持的體驗)</font></p>
 <table border="1" width="100%" height="311">
